--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -14,17 +14,17 @@
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is one of your favorite TV series/anime?</li>
+                        <li>What do you think of HTML so far?</li>
                     </ul>
-                    <div class="img-container more-space-offset">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/tv.webp"
-                            alt="tv"
+                            src="images/lab-attire.webp"
+                            alt="lab in lab attire"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>HTML Potluck</li>
+                        <li><span class="type">Exercise</span>Basic HTML Drills (for 6023)</li>
                     </ul>
                 </div>
 
@@ -33,22 +33,22 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>HTML Children Review</li>
-                            <li><span class="type">Project</span>HTML Potluck</li>
+                            <li><span class="type">Exercise</span>Basic HTML Drills (for 6023)</li>
+                            <li><span class="type">Lab Time</span>Past Assignments</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>  
-                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
+                            <li><span class="type">Lab Time</span>HTML Potluck - Other Options</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck [cont.]</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
