--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -25,6 +25,7 @@
                     <h2>Deliverables for Today</h2>
                     <ul>
                         <li><span class="type">Exercise</span>Basic HTML Drills (for 6023)</li>
+                        <li><span class="type">Exercise</span>Intro to HTML Session Wrapup</li>
                     </ul>
                 </div>
 
@@ -49,6 +50,7 @@
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
                             <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Intro to HTML Session Wrapup</li>
                         </ul>
                     </div>
                 </div>
