--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -36,6 +36,7 @@
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
                             <li><span class="type">Exercise</span>Color Palette [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Clean Code - Part 3 (CSS Rules and Properties)</li>
                             <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
                         </ul>
                     </div>
