--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -24,6 +24,7 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 7</li>
                         <li><span class="type">Exercise</span>Color Palette [cont.]</li>
                         <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
                         <li><span class="type">Exercise</span>Document Flow Drills</li>
@@ -35,6 +36,7 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 7</li>
                             <li><span class="type">Exercise</span>Color Palette [cont.]</li>
                             <li><span class="type">PowerPoint</span>Clean Code - Part 3 (CSS Rules and Properties)</li>
                             <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
