--- a/cookbook/css-checker.html
+++ b/cookbook/css-checker.html
@@ -154,7 +154,7 @@
                             </div>
                             <div>
                                 <span class="block purple"></span>
-                                <div>(On Hover) Matching Opening/Closing Tags</div>
+                                <div>(On Hover) Matching Opening/Closing Brackets</div>
                             </div>
                             <div>
                                 <span class="block pink"></span>
