--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 22nd</h1>
-            <h3>Week 21 Day 3 (Intro to CSS - Day 2)</h3>
+            <h1>GDWD 105 - Agenda for January 23rd</h1>
+            <h3>Week 21 Day 4 (Intro to CSS - Day 3)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What would your spirit animal be?</li>
+                        <li>Cats? or Dogs? (or both? or neither?)</li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space dark-blue-gray">
                         <img 
-                            src="images/spirit-animal-0.jpg"
-                            alt="spirit animal"
+                            src="images/cats-vs-dogs.jpeg"
+                            alt="painter fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 7</li>
-                        <li><span class="type">Exercise</span>Color Palette [cont.]</li>
-                        <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
                         <li><span class="type">Exercise</span>Document Flow Drills</li>
+                        <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
+                        <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
+                        <li><span class="type">Exercise</span>Upside-down Tetris (?)</li>
                     </ul>
                 </div>
 
@@ -36,26 +36,24 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 7</li>
-                            <li><span class="type">Exercise</span>Color Palette [cont.]</li>
-                            <li><span class="type">PowerPoint</span>Clean Code - Part 3 (CSS Rules and Properties)</li>
-                            <li><span class="type">Exercise</span>Basic CSS Drills - Part 2</li>
+                            <li><span class="type">Exercise</span>Document Flow Drills</li>
+                            <li><span class="type">PowerPoint</span>Box Model</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>  
-                            <li><span class="type">PowerPoint</span>CSS Selectors</li>
-                            <li><span class="type">Demo</span>Divs, Spans, and Flow</li>
+                            <li><span class="type">Demo</span>Box Model</li>
+                            <li><span class="type">Exercise</span>Box Model - Padding Drills</li>
+                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Document Flow</li>
-                            <li><span class="type">Exercise</span>Document Flow Drills</li>
+                            <li><span class="type">Exercise</span>Upside-down Tetris</li>
                         </ul>
                     </div>
                 </div>
