--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -36,6 +36,7 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 8</li>
                             <li><span class="type">Exercise</span>Document Flow Drills</li>
                             <li><span class="type">PowerPoint</span>Box Model</li>
                         </ul>
