--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,27 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 24th</h1>
-            <h3>Week 21 Day 5 (Intro to CSS - Day 4)</h3>
+            <h1>GDWD 105 - Agenda for January 27th</h1>
+            <h3>Week 22 Day 1 (Intro to CSS - Day 5)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Would you prefer a staycation? or a destination vacation?</li>
+                        <li>What is your favorite ice cream flavor? Any toppings?</li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/island-vacation.jpg"
-                            alt="cat on an island turtle"
+                            src="images/icecream-cats.jpg"
+                            alt="lazy sundae"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Using the Coding Cookbook 9</li>
-                        <li><span class="type">Exercise</span>Box Model - Border Drills</li>
-                        <li><span class="type">Exercise</span>Upside-down Tetris</li>
-                        <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
                         <li><span class="type">Exercise</span>Container and Selectors Drills</li>
+                        <li><span class="type">Project</span>Box Framing</li>
                     </ul>
                 </div>
 
@@ -37,25 +34,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Using the Coding Cookbook 9</li>
-                            <li><span class="type">Exercise</span>Box Model - Border Drills</li>
-                            <li><span class="type">Exercise</span>Upside-down Tetris</li>
+                            <li><span class="type">Kahoot</span>CSS Selectors to English Review</li>
+                            <li><span class="type">Kahoot</span>English to CSS Selectors Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>  
-                            <li><span class="type">Exercise</span>Box Model - Margin Drills</li>
-                            <li><span class="type">Demo</span>Combining Selectors</li>
+                            <li><span class="type">Exercise</span>Container and Selectors Drills</li>
+                            <li><span class="type">Demo</span>Absolute vs. Relative Units</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Combining Selectors [cont.]</li>
-                            <li><span class="type">Exercise</span>Container and Selectors Drills</li>
+                            <li><span class="type">Project</span>Box Framing</li>
                         </ul>
                     </div>
                 </div>
