--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,24 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 6th</h1>
-            <h3>Week 23 Day 4 (Content Layouts - Day 1)</h3>
+            <h1>GDWD 105 - Agenda for February 7th</h1>
+            <h3>Week 23 Day 5 (Content Layouts - Day 2)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>Who is your favorite supervillain? (if you have one)</li>
+                        <li>What is a blocker that frequently prevents you from starting something?</li>
                     </ul>
-                    <div class="img-container more-space off-black">
+                    <div class="img-container more-space light-teal">
                         <img
-                            src="images/venom.jpeg"
-                            alt="venom"
+                            src="images/howaboutno.webp"
+                            alt="how about no"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                        <li><span class="type">Exercise</span>Trek Cards</li>
+                        <li><span class="type">Exercise</span>Animagram Cards</li>
+                        <li><span class="type">Exercise</span>Pokemon Cards</li>
                     </ul>
                 </div>
 
@@ -34,23 +34,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Advanced CSS and Page Layouts</li>
-                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients</li>
+                            <li><span class="type">PowerPoint</span>Side-by-Side Content Layouts</li>
+                            <li><span class="type">Demo</span>Side by Side Demo</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>  
-                            <li><span class="type">Demo</span>Cards, Buttons, and Gradients [cont.]</li>
-                            <li><span class="type">Exercise</span>Trek Cards</li>
+                            <li><span class="type">Demo</span>Side by Side Demo [cont.]</li>
+                            <li><span class="type">Exercise</span>Animagram Cards [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Animagram Cards</li>
+                            <li><span class="type">Exercise</span>Pokemon Cards</li>
                         </ul>
                     </div>
                 </div>
