--- a/cookbook/appetizers/utilizing-google-fonts.html
+++ b/cookbook/appetizers/utilizing-google-fonts.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Utilizing Google Fonts - Appetizers - The Coding Cookbook</title>
+        <title>Utilizing Google Fonts (for Code) - Appetizers - The Coding Cookbook</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link href="../css/cookbook.css" rel="stylesheet">
         <link href="../css/appetizer.css" rel="stylesheet">
@@ -75,7 +75,7 @@
         </nav>
         
         <header id="title" class="">
-            <h1>Utilizing Google Fonts</h1>
+            <h1>Utilizing Google Fonts (for Code)</h1>
             <h3>
                 A tutorial showing how to include pre-baked fonts 
                 in your web page
