--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,27 +8,27 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 11th</h1>
-            <h3>Week 24 Day 2 (Content Layouts - Day 4)</h3>
+            <h1>GDWD 105 - Agenda for February 12th</h1>
+            <h3>Week 24 Day 3 (Content Layouts - Day 5)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather watch <b>only scary movies</b> or 
-                            <b>only rom-coms</b> for the rest of your life?
+                            Do you have a favorite obscure movie/series/game 
+                            that no one else seems to know about?
                         </li>
                     </ul>
-                    <div class="img-container more-space black">
+                    <div class="img-container">
                         <img 
-                            src="images/anti-love.jpg"
-                            alt="anti love helmet"
+                            src="images/shooting-star.jpg"
+                            alt="shooting star"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Three Heroes</li>
-                        <li><span class="type">Exercise</span>Themed Gallery Page</li>
+                        <li><span class="type">Exercise</span>Using the Coding Cookbook 12</li>
+                        <li><span class="type">Project</span>Personal Portfolio Site</li>
                     </ul>
                 </div>
 
@@ -37,22 +37,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Three Heroes</li>
+                            <li><span class="type">Exercise</span>Using the Coding Cookbook 12</li>
+                            <li><span class="type">Demo</span>Google Fonts</li>
+                            <li><span class="type">Project</span>Personal Portfolio Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>  
-                            <li><span class="type">PowerPoint</span>Gallery Content Layouts</li>
-                            <li><span class="type">Demo</span>Galleries</li>
+                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Themed Gallery Page</li>
+                            <li><span class="type">Project</span>Personal Portfolio Site [cont.]</li>
                         </ul>
                     </div>
                 </div>
