--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,27 +8,28 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 13th</h1>
-            <h3>Week 24 Day 4 (Content Layouts - LAB DAY)</h3>
+            <h1>GDWD 105 - Agenda for February 14th</h1>
+            <h3>Week 24 Day 5 (Navigation & Responsiveness - Day 1)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        Would you rather be able to:
+                        Would you rather:
                         <ul>
-                            <li>eat anything you want in one meal a day for perfect nutrition?</li>
-                            <li>sleep for 1 hour and be perfectly rested?
+                            <li>spend a week trapped <b>outside</b> of your home?</li>
+                            <li>spend a week trapped <b>inside</b> of your home?</li>
                         </ul>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/power-nap.jpeg"
-                            alt="power nap"
+                            src="images/great-indoors.webp"
+                            alt="the great indoors"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>Content Layouts Session Wrap Up</li>
+                        <li><span class="type">Quiz</span>Content Layouts</li>
+                        <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
                     </ul>
                 </div>
 
@@ -37,23 +38,24 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Showcase</span>Content Layouts Showcase</li>
-                            <li><span class="type">Lab Time</span>Previous Project/Assignments</li>
+                            <li><span class="type">Quiz</span>Content Layouts</li>
+                            <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>  
-                            <li><span class="type">Lab Time</span>Extra Credit - Product Comparison Page</li>
+                            <li><span class="type">PowerPoint</span>Navigation Layouts - Navbars</li>
+                            <li><span class="type">Demo</span>Navbars - Basic</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Survey</span>Content Layouts Session Wrap Up</li>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Demo</span>Navbars - Basic [cont.]</li>
+                            <li><span class="type">Exercise</span>Client Navbars?</li>
                         </ul>
                     </div>
                 </div>
