--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for February 21st</h1>
-            <h3>Week 25 Day 4 (Navigation & Responsiveness - Day 5)</h3>
+            <h1>GDWD 105 - Agenda for February 24th</h1>
+            <h3>Week 25 Day 5 (Navigation & Responsiveness - LAB DAY)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather have: a bag that could hold anything, or
-                            your own pocket-dimension accessed via suitcase?
+                            Would you rather have a perfect photographic memory 
+                            or a perfect echoic memory?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-gray">
+                    <div class="img-container more-space blue-gray">
                         <img 
-                            src="images/hoarder-fox.webp"
-                            alt="hoarder fox"
+                            src="images/lab-fox.webp"
+                            alt="lab fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Dropdown Menu Site</li>
+                        <li><span class="type">Survey</span>CSS Navigation & Responsiveness Session Wrap Up</li>
                     </ul>
                 </div>
 
@@ -36,23 +36,22 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Powerpoint</span>Navigation Layouts - Dropdown Menus</li>
-                            <li><span class="type">Demo</span>Dropdown Menus</li>
+                            <li><span class="type">Lab Time</span>Past Assignments/Feedback</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>  
-                            <li><span class="type">Demo</span>Dropdown Menus [cont.]</li>
-                            <li><span class="type">Project</span>Dropdown Menu Site</li>
+                            <li><span class="type">Lab Time</span>Extra Credit - E-commerce Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Dropdown Menu Site [cont.]</li>
+                            <li><span class="type">Survey</span>CSS Navigation & Responsiveness Session Wrap Up</li>
+                            <li><span class="type">Lab Time</span>Study Hints</li>
                         </ul>
                     </div>
                 </div>
