--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,52 +8,55 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 3rd</h1>
-            <h3>Week 26 Day 5 (FINALS WEEK)</h3>
+            <h1>GDWD 105 - Agenda for March 4th</h1>
+            <h3>Week 27 Day 1 (Career Services Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            If you could go back in time, what is something
-                            you'd tell yourself back on Day 1 of this course?
+                            What is a character trait that you admire in other people?
                         </li>
                     </ul>
-                    <div class="img-container dark-blue-green">
+                    <div class="img-container">
                         <img 
-                            src="images/time-traveler.webp"
-                            alt="time traveling owl"
+                            src="images/impressive.webp"
+                            alt="vader impressive"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EXAM</span></li>
-                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
-                        <li><span class="type">ANY REMAINING CODING ASSIGNMENTS</span></li>
+                        <li><span class="type">Survey</span>Finals Week Wrap Up</li>
+                        <li><span class="type">Exercise</span>Discussion: Careers in Graphic Design (CS)</li>
+                        <li><span class="type">Exercise</span>Discussion: Personal Branding Research (CS)</li>
+                        <li><span class="type">Exercise</span>Personal Branding Statement (CS)</li>
                     </ul>
                 </div>
 
                 <div id="agenda">
                     <div class="wrapper">
                         <h3>Announcements (9am-9:10am)</h3>
-                        <h3>Period 1 (9:10am-11:15am)</h3>
+                        <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">FINAL EXAM</span></li>
+                            <li><span class="type">PowerPoint</span>Careers in Graphic Design</li>
+                            <li><span class="type">Exercise</span>Discussion: Careers in Graphic Design (CS)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
-                        <h3>Period 2 (11:25am-12pm)</h3>
+                        <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>JavaScript Functions</li>
-                            <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                            <li><span class="type">PowerPoint</span>Personal Branding [pt 1]</li>
+                            <li><span class="type">Exercise</span>Discussion: Personal Branding Research (CS)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Any Remaining Coding Assignments / Extra Credit</li>
+                            <li><span class="type">Survey</span>Finals Week Wrap Up</li>
+                            <li><span class="type">PowerPoint</span>Personal Branding [pt 2]</li>
+                            <li><span class="type">Exercise</span>Personal Branding Statement (CS)</li>
                         </ul>
                     </div>
                 </div>
