--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,30 +8,27 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 5th</h1>
-            <h3>Week 27 Day 2 (Career Services Week)</h3>
+            <h1>GDWD 105 - Agenda for March 6th</h1>
+            <h3>Week 27 Day 3 (Career Services Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            What is a character trait or behavior 
-                            that you really dislike in other people?
+                            What is a skill that you wish you could be better at?
                         </li>
                     </ul>
-                    <div class="img-container more-space black">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/emperor.webp"
-                            alt="emperor hate"
+                            src="images/lab-experiment.webp"
+                            alt="overthinking fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>Finals Week Wrap Up</li>
-                        <li><span class="type">Exercise</span>Discussion: Personal Branding Research (CS)</li>
-                        <li><span class="type">Exercise</span>Personal Brand Statement</li>
-                        <li><span class="type">Exercise</span>Personal Brand Statement with Grammarly</li>
-                        <li><span class="type">Exercise</span>Brand Inspiration Collage</li>
+                        <li><span class="type">Project</span>Personal Brand Style Guide</li>
+                        <li><span class="type">Exercise</span>Branded Resume Sketches</li>
+                        <li><span class="type">Exercise</span>Branded Resume - First Draft</li>
                 </div>
 
                 <div id="agenda">
@@ -39,26 +36,22 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Survey</span>Finals Week Wrap Up</li>
-                            <li><span class="type">Exercise</span>Discussion: Personal Branding Research (CS)</li>
-                            <li><span class="type">PowerPoint</span>Personal Branding [pt 2]</li>
-                            <li><span class="type">Exercise</span>Personal Brand Statement</li>
+                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Introduction to Grammarly</li>
-                            <li><span class="type">Exercise</span>Personal Brand Statement with Grammarly</li>
+                            <li><span class="type">PowerPoint</span>Branded Resume</li>
+                            <li><span class="type">Exercise</span>Branded Resume Sketches</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Brand Inspiration Collage</li>
-                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
+                            <li><span class="type">Exercise</span>Branded Resume - First Draft</li>
                         </ul>
                     </div>
                 </div>
