--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,8 +8,8 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 6th</h1>
-            <h3>Week 27 Day 3 (Career Services Week)</h3>
+            <h1>GDWD 105 - Agenda for March 7th</h1>
+            <h3>Week 27 Day 4 (Career Services Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
@@ -18,17 +18,17 @@
                             What is a skill that you wish you could be better at?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-gray">
+                    <div class="img-container more-space dark-teal">
                         <img 
-                            src="images/lab-experiment.webp"
-                            alt="overthinking fox"
+                            src="images/borntocreate.webp"
+                            alt="born to create"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Personal Brand Style Guide</li>
-                        <li><span class="type">Exercise</span>Branded Resume Sketches</li>
-                        <li><span class="type">Exercise</span>Branded Resume - First Draft</li>
+                        <li><span class="type">Project</span>Freelancing I: Proposals</li>
+                        <li><span class="type">Survey</span>105 End of Course Survey</li>
+                        <li><span class="type">Project</span>Freelancing II: Invoices</li>
                 </div>
 
                 <div id="agenda">
@@ -36,22 +36,22 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
+                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Branded Resume</li>
-                            <li><span class="type">Exercise</span>Branded Resume Sketches</li>
+                            <li><span class="type">Project</span>Freelancing I: Proposals</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Branded Resume - First Draft</li>
+                            <li><span class="type">Survey</span>105 End of Course Survey</li>
+                            <li><span class="type">Project</span>Freelancing II: Invoices</li>
                         </ul>
                     </div>
                 </div>
