--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -15,7 +15,8 @@
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            What is a skill that you wish you could be better at?
+                            Ideally, after graduation, would you prefer to freelance,
+                            or work at a more traditional full-time position? Or both?
                         </li>
                     </ul>
                     <div class="img-container more-space dark-teal">
