--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -27,9 +27,9 @@
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Freelancing I: Proposals</li>
+                        <li><span class="type">Exercise</span>Freelancing I: Proposals</li>
                         <li><span class="type">Survey</span>105 End of Course Survey</li>
-                        <li><span class="type">Project</span>Freelancing II: Invoices</li>
+                        <li><span class="type">Exercise</span>Freelancing II: Invoices</li>
                 </div>
 
                 <div id="agenda">
@@ -44,7 +44,7 @@
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Freelancing I: Proposals</li>
+                            <li><span class="type">Exercise</span>Freelancing I: Proposals</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -52,7 +52,7 @@
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
                             <li><span class="type">Survey</span>105 End of Course Survey</li>
-                            <li><span class="type">Project</span>Freelancing II: Invoices</li>
+                            <li><span class="type">Exercise</span>Freelancing II: Invoices</li>
                         </ul>
                     </div>
                 </div>
