--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,28 +8,28 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for March 7th</h1>
-            <h3>Week 27 Day 4 (Career Services Week)</h3>
+            <h1>GDWD 105 - Agenda for March 10th</h1>
+            <h3>Week 27 Day 5 (Career Services Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Ideally, after graduation, would you prefer to freelance,
-                            or work at a more traditional full-time position? Or both?
+                            Which of your remaining classes are you most excited 
+                            for: Motion Graphics (106), Layout Design and Print (107), or
+                            the Portfolio course (108)?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-teal">
+                    <div class="img-container more-space final-black">
                         <img 
-                            src="images/borntocreate.webp"
-                            alt="born to create"
+                            src="images/finalday.jpg"
+                            alt="final day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Freelancing I: Proposals</li>
-                        <li><span class="type">Survey</span>105 End of Course Survey</li>
-                        <li><span class="type">Exercise</span>Freelancing II: Invoices</li>
+                        <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
+                        <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
                 </div>
 
                 <div id="agenda">
@@ -37,22 +37,25 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing</li>
+                            <li><span class="type">Announcement</span>Student Catalog Changes</li>
+                            <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
+                            <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Freelancing I: Proposals</li>
+                            <li><span class="type">Project</span>Branded Resume - Complete (CS) [cont.]</li>
+                            <li><span class="type">Demo</span>JavaScript Countdown</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
-                        <h3>Period 3 (12:45pm-2pm)</h3>
+                        <h3>Period 3 (12:45pm-1:30pm)</h3>
                         <ul>
-                            <li><span class="type">Survey</span>105 End of Course Survey</li>
-                            <li><span class="type">Exercise</span>Freelancing II: Invoices</li>
+                            <li><span class="type">Project</span>Branded Resume - Complete (CS) [cont.]</li>
+                            <li><span class="type">Demo</span>JavaScript Countdown [cont.]</li>
                         </ul>
                     </div>
                 </div>
